--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,9 @@ dependencies:
   firebase_auth: ^5.3.1
   firebase_storage: 12.3.3
   image_picker: ^1.1.2
-
+  share_plus: ^7.0.2
+  url_launcher: ^6.1.14
+  flutter_share_me: ^1.3.0
 
 dev_dependencies:
   flutter_test:
